	 widget/menu.c: add option as to whether to embed snapshot when
	 creating RZX files from a given snapshot.
20031009 fuse.c: add information from uname() into creator custom data.
20031009 configure.in, ui/sdl/sdljoystick.c: if using SDL, use its
	 joystick code by default. Change BYTE etc in sdljoystick.c to
	 libspectrum_byte. Add missing ; to configure.in (Darren).
20031010 printer.c, settings.dat, ui/options.dat: add option to disable
	 ZX (etc) printer.
20031010 fuse.c: On Solaris, uname() returns 1 to indicate success.
20031011 machine.c, utils.c: when looking for ROMs or library files, look
	 in the roms/ or lib/ directory off where the Fuse executable is,
	 not off the current directory.
20031011 Remove the now unused getopt/ directory.
20031012 rzx.c: reset rzx_competition_mode when starting a non-competition
	 mode recording.
20031013 fuse.c: check libspectrum's version at startup.
20031013 fuse.c: add libspectrum version to the creator custom data.
20031013 fuse.c, rzx.c: put gcrypt version into creator custom data. Give
	 warning if a competition mode recording is started, but gcrypt is
	 not available.
20031014 configure.in: no longer need to explicitly link against zlib
20031014 configure.in, trdos.c: we need <strings.h> for strncasecmp on
	 QNX6 (thanks, Mike Gorchak).
20031015 ui/gtk/statusbar.c: the statusbar should not expand to fill the
	 space available.
20031016 compat/Makefile.am: distribute getopt.h.
20031016 event.c, debugger/debugger.h: must explicitly include glib.h as
	 it is no longer pulled in by libspectrum.
20031020 fuse.c, trdos.c, utils.c: use libspectrum_identify_file_with_class
	 where appropriate.
20031020 utils.c: use TMPDIR before /tmp for temporary files.
20031023 Add simple 'poke finder'.
20031023 fuse.c, osssound.c: more useful error messages if we couldn't
	 initialise the OSS sound code.
20031025 pokefinder.c: UI improvements.
20031025 pokefinder.c: keyboard shortcuts